2004-06-12  Mark McLoughlin  <mark@skynet.ie>

	Patch from Julio M. Merino Vidal <jmmv@menta.net>
	in bug #134247.

	* doc/gconf/Makefile.am: don't create a directory if
	its not needed.

2004-06-12  Mark McLoughlin  <mark@skynet.ie>

	Patch from Mariano Suárez-Alvarez <msuarezalvarez@arnet.com.ar>
	in bug #122958 to change the encoding logic so as to produce
	shorter encoded keys when encoding non-ascii characters. Does
	not require changes to the decoder.

	* gconf/gconf.c: (gconf_escape_key): use a shorter encoding
	for non-ascii characters.

2004-06-12  Mark McLoughlin  <mark@skynet.ie>

	64-bit fix from Joe Marcus Clarke <marcus@freebsd.org>

	* backends/markup-tree.c: (parse_tree): the length
	returned from g_file_get_contents() is a gsize
	not an int.

2004-06-09  Kjartan Maraas  <kmaraas@gnome.org>

	* gconf/gconf-internals.c: (gconf_activate_server):
	Plug a small leak. Fixes bug #143941.

2004-05-31  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: post-release bump to 2.7.2.

==================== 2.7.1 ====================

2004-05-31  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: Version 2.7.1.

2004-05-04  Morten Welinder  <terra@gnome.org>

	* gconf/gconf-internals.c (gconf_activate_server): Delete stray
	";" aka null statement.  (Valid only in C99 where it had no
	effect.)

2004-04-23  Mark McLoughlin  <mark@skynet.ie>

	* gconf/gconf-sources.c: (gconf_sources_new_from_addresses): return
	NULL and the last error if we failed to resolve any of the addresses.

2004-04-21  Richard Hult  <richard@imendio.com>

	* gconf/gconf-database.c (gconf_database_unset): Init
	modified_sources to NULL since we access it later. Fixes random
	crashes.

2004-04-19  Mark McLoughlin  <mark@skynet.ie>

	Based on a patch from Julio Merino <jmmv@hispabsd.org>
	in bug #102825

	* configure.in: add a --enable-gtk=yes/no/auto (defaults to auto)

2004-04-19  Mark McLoughlin  <mark@skynet.ie>

	Patch Elijah Newren <bugsqueesher@yahoo.com> in bug #138009
