@@ -1,5 +1,14 @@
 2004-06-12  Mark McLoughlin  <mark@skynet.ie>
 
+	Patch from Daniel Elstner <daniel.elstner@gmx.net>
+	in bug #143679.
+
+	* gconf.m4.in (AM_GCONF_SOURCE_2): Use $(sysconfdir)/gconf/schemas
+	as the default value of GCONF_SCHEMA_FILE_DIR, without the trailing
+	slash.  Also get rid of the pointless else branch.
+
+2004-06-12  Mark McLoughlin  <mark@skynet.ie>
+
 	Patch from Julio M. Merino Vidal <jmmv@menta.net>
 	in bug #134247.
 
